--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-native": "0.72.3",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.12.0",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
     "react-native-vector-icons": "^10.0.0",
