--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@react-navigation/stack": "^6.3.17",
     "react": "18.2.0",
     "react-native": "0.72.3",
+    "react-native-calendars": "^1.1300.0",
     "react-native-dropdown-picker": "^5.4.6",
     "react-native-gesture-handler": "^2.12.0",
     "react-native-get-random-values": "^1.9.0",
