--- a/package.json
+++ b/package.json
@@ -23,7 +23,10 @@
     "react-native-safe-area-context": "^4.7.1",
     "react-native-screens": "^3.23.0",
     "react-native-vector-icons": "^10.0.0",
-    "realm": "^11.10.1"
+    "react-redux": "^8.1.2",
+    "realm": "^11.10.1",
+    "redux": "^4.2.1",
+    "redux-thunk": "^2.4.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
